test/corpus/global_declarations.txt
================================================================================
Global declaration
================================================================================

$foobar: untyped

--------------------------------------------------------------------------------

(program
  (global_declaration
    (global_name)
    (type
      (builtin_type))))

================================================================================
Capitalized global declaration
================================================================================

$FOOBAR: untyped

--------------------------------------------------------------------------------

(program
  (global_declaration
    (global_name)
    (type
      (builtin_type))))
