test/corpus/nested_declarations.txt
================================================================================
Module within a module
================================================================================

module Foo
  module Bar
  end
end

--------------------------------------------------------------------------------

(program
  (module
    (module_name)
    (members
      (module
        (module_name)))))

================================================================================
Class within a module
================================================================================

module Foo
  class Bar
  end
end

--------------------------------------------------------------------------------

(program
  (module
    (module_name)
    (members
      (class
        (class_name)))))

================================================================================
Interface within a module
================================================================================

module Foo
  interface _Bar
  end
end

--------------------------------------------------------------------------------

(program
  (module
    (module_name)
    (members
      (interface
        (interface_name)))))

================================================================================
Constant within a module
================================================================================

module Foo
  BAR: String
end

--------------------------------------------------------------------------------

(program
  (module
    (module_name)
    (members
      (constant_declaration
        (constant_name)
        (type
          (namespaceable_type
            (class_name)))))))

================================================================================
Module within a class
================================================================================

class Foo
  module Bar
  end
end

--------------------------------------------------------------------------------

(program
  (class
    (class_name)
    (members
      (module
        (module_name)))))

================================================================================
Class within a class
================================================================================

class Foo
  class Bar
  end
end

--------------------------------------------------------------------------------

(program
  (class
    (class_name)
    (members
      (class
        (class_name)))))

================================================================================
Interface within a class
================================================================================

module Foo
  interface _Bar
  end
end

--------------------------------------------------------------------------------

(program
  (module
    (module_name)
    (members
      (interface
        (interface_name)))))

================================================================================
Constant within a class
================================================================================

class Foo
  BAR: String
end

--------------------------------------------------------------------------------

(program
  (class
    (class_name)
    (members
      (constant_declaration
        (constant_name)
        (type
          (namespaceable_type
            (class_name)))))))
