test/corpus/type_alias_declarations.txt
================================================================================
Type alias skeleton
================================================================================

type foobar = untyped

--------------------------------------------------------------------------------

(program
  (declaration
    (type_alias_declaration
      (alias_name)
      (type
        (builtin_type)))))

================================================================================
Generic type alias
================================================================================

type foobar[T] = untyped

--------------------------------------------------------------------------------

(program
  (declaration
    (type_alias_declaration
      (alias_name)
      (module_type_parameters
        (type_variable))
      (type
        (builtin_type)))))

================================================================================
Bound type alias
================================================================================

type foobar[T < String] = untyped

--------------------------------------------------------------------------------

(program
  (declaration
    (type_alias_declaration
      (alias_name)
      (module_type_parameters
        (bound_type
          (type_variable)
          (class_name)))
      (type
        (builtin_type)))))
